Bug 102660 - Bluetooth headset stops working after pulseaudio update to 11
Summary: Bluetooth headset stops working after pulseaudio update to 11
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: modules (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-11 14:59 UTC by Martin Wilck
Modified: 2017-09-14 09:14 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
PA 11 log file (492.04 KB, text/x-log)
2017-09-11 15:00 UTC, Martin Wilck
Details
PA 10 log file (500.19 KB, text/x-log)
2017-09-11 15:01 UTC, Martin Wilck
Details

Description Martin Wilck 2017-09-11 14:59:31 UTC
I'm observing this on openSUSE tumbleweed. The update of PA to 10.99 and then 11.0 broke playback on my bluetooth audio devices.

Unitron udirect 3 hearing aid add-on:

http://unitron.com/content/unitron/us/en/professional/hearing-solutions/accessories/hearing-instrument-accessories/udirect-3.html

Twiek6:
http://www.audiovox.de/produkte/twiek6-2/

Both can be coupled and are displayed by PA as sinks. They can be selected, too. But instead of sound playback I hear nothing but a feeble "peep" on the udirect3 and then nothing more. Twiek6 doesn't emit any sound at all. I verified that reverting back to PA 10.0 on an otherwise unchanged system fixes the problem.

I tried several suggestions I found on the web with no success:

load-module module-bluetooth-discover headset=native in default.pa
disabling module-suspend-on-idle in default.pa

resample-method = trivial in daemon.conf (tried other settings as well).

https://bugzilla.suse.com/show_bug.cgi?id=1058053
Comment 1 Martin Wilck 2017-09-11 15:00:37 UTC
Created attachment 134163 [details]
PA 11 log file
Comment 2 Martin Wilck 2017-09-11 15:01:11 UTC
Created attachment 134164 [details]
PA 10 log file

I can't see anything suspcicious comparing these logs, but maybe you can?
Comment 3 Martin Wilck 2017-09-11 20:24:13 UTC
Hmm, I compiled 11.0 from source, and now the udirect 3 headset works at least in A2DP mode. HSP/HFP does not work though. The Twiek 6 still doesn't beep.
Not sure what the difference from the openSUSE 11.0 package may be.

Anyway, with 10.0, both A2DP and HSP work nicely.
Comment 4 Arun Raghavan 2017-09-13 02:48:59 UTC
What would help here is (a) logs from bluez and PA when things aren't working, and (b) if you're feeling adventurous, since you've got the code from git built and running, a git bisect taking us to the problematic commit.

I'm going to try to reproduce the problem here too.
Comment 5 Arun Raghavan 2017-09-13 03:10:38 UTC
Okay, I can see this on my Sony SBH 20 -- A2DP works, HSP does not.
Comment 6 Arun Raghavan 2017-09-13 04:01:55 UTC
Fix for this is at https://lists.freedesktop.org/archives/pulseaudio-discuss/2017-September/028695.html

We should have something out in a 11.1 release before too long (hopefully by the end of this week).
Comment 7 Martin Wilck 2017-09-13 07:14:09 UTC
Am I understanding correctly that I should be able to fix this problem by setting 

load-module module-bluetooth-discover autodetect_mtu=false

?
Comment 8 Martin Wilck 2017-09-13 07:18:11 UTC
(In reply to Arun Raghavan from comment #4)
> What would help here is (a) logs from bluez and PA when things aren't
> working, and (b) if you're feeling adventurous, since you've got the code
> from git built and running, a git bisect taking us to the problematic commit.

Thanks for looking into this! I attached the PA logs above. Didn't look into the bluez logging configuration so far. Bisecting was my plan but it was difficult because of the problems with reproduction (comment #3). Bisection requires a reliable "good/bad" distinction.

Anyway, you seem to have spotted the problem already, many thanks.
Comment 9 Arun Raghavan 2017-09-13 11:27:37 UTC
(In reply to Martin Wilck from comment #7)
> Am I understanding correctly that I should be able to fix this problem by
> setting 
> 
> load-module module-bluetooth-discover autodetect_mtu=false
> 
> ?

That's right
Comment 10 Martin Wilck 2017-09-14 09:14:17 UTC
Verified that the problem is fixed with the config setting from comment 7.

Thanks a lot.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.